# bevy_slyedoc_bvh

./: .gitignore  Cargo.toml  LICENSE  readme.md
assets/models/clock-tower/: license.txt  scene.glb  scene.gltf
assets/models/sponza/: sponza.gltf
assets/shaders/: bvh_material.wgsl  raytrace.wgsl
benches/: bvh.rs
crates/bvh/: Cargo.toml
crates/bvh/src/: aabb.rs  camera.rs  lib.rs  ray.rs
crates/raytrace/: Cargo.toml
crates/raytrace/src/: lib.rs
docs/: notes.md
examples/: bmr_intersect.rs  bmr_simple.rs  clock_tower.rs  custom_cursor.rs  img.rs  img_para.rs  main.rs  nested_meshes.rs  raytrace.rs  shader.rs  sponza.rs
examples/helpers/: camera_controller.rs  cursor.rs  exit.rs  mod.rs  overlay.rs
src/: aabb.rs  assets.rs  bvh.rs  camera.rs  lib.rs  ray.rs  tlas.rs  tri.rs
