[package]
name = "bevy_slyedoc_bvh"
version = "0.1.0"
edition = "2021"

[features]
default = ["bvh", "bevy/trace"]
bvh = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.7.0" }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy-inspector-egui = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"

[dev-dependencies]
# for testing
bevy_mod_raycast = "0.4.0"
bevy_prototype_debug_lines = { version = "0.7.1", features = ["3d"] }
#{ git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "main"}