[package]
name = "bevy_slyedoc_bvh"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.7.0" }
bevy-inspector-egui = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3"

# for testing
bevy_mod_raycast = "0.4.0"
bevy_prototype_debug_lines = { version = "0.7.1", features = ["3d"] }
#{ git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "main"}