[package]
name = "bevy_slyedoc_bvh"
version = "0.1.0"
edition = "2021"
exclude = ["assets"]

[lib]
crate-type = ["lib"] 
# This is here based on https://github.com/bheisler/criterion.rs/issues/193
# had issues saving baselines
bench = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[features]
default = []
trace = []
save = [] # to test benchmark output



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy =  { version = "0.7.0" }
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
#bevy-inspector-egui = { version = "0.11.0", features = [""] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
tracing = "0.1.34"


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
image = "0.24.2"
tracing-subscriber="0.3.11"
tracing-chrome = "0.6.0"

# for testing
#bevy_mod_raycast = "0.5.0"
#bevy_prototype_debug_lines = { version = "0.7.1", features = ["3d"] }
#{ git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "main"}

[[bench]]
name = "bvh"
harness = false

